--- a/package.json
+++ b/package.json
@@ -13,15 +13,23 @@
     "start": "node /dist/src/index.js"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
+    "@types/helmet": "^0.0.48",
+    "@types/morgan": "^1.9.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^25.0.3",
     "nodemon": "^3.1.11",
     "typescript": "^5.9.3"
   },
   "dependencies": {
     "@types/dotenv": "^6.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "groq-sdk": "^0.37.0"
+    "groq-sdk": "^0.37.0",
+    "helmet": "^8.1.0",
+    "morgan": "^1.10.1",
+    "multer": "^2.0.2"
   }
 }
